src/objects/Other_Protocol_Report__c.object
<CustomObject>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protocol_Name__c</fullName>
        <label>Protocol Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protocol_Violation_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Protocol Violation Report</label>
        <referenceTo>Protocol_Violation_Report__c</referenceTo>
        <relationshipLabel>Other Protocol Report</relationshipLabel>
        <relationshipName>Other_Protocol_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Other Protocol Report</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Protocol Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>